cmake_minimum_required(VERSION 2.6)
PROJECT(CalibTool)

find_package (OpenCV REQUIRED)
if (OpenCV_FOUND)
  include_directories(${OpenCV_INCLUDE_DIRS})
  set(LIBS ${LIBS} ${OpenCV_LIBS})
  message(STATUS ${OpenCV_INCLUDE_DIRS})
  message(STATUS ${LIBS})
endif (OpenCV_FOUND)

set( REDIS hiredis )

ADD_LIBRARY( calib STATIC src/calib.cpp )
ADD_LIBRARY( track STATIC src/track.cpp )
ADD_EXECUTABLE( gencalib src/gencalib.cpp )
ADD_EXECUTABLE( trackerconf src/trackerconf.cpp )
ADD_EXECUTABLE( tracker src/tracker.cpp )
ADD_EXECUTABLE( testcli src/test.cpp )
TARGET_LINK_LIBRARIES ( gencalib calib ${LIBS} )
TARGET_LINK_LIBRARIES ( trackerconf track ${LIBS} )
TARGET_LINK_LIBRARIES ( tracker track calib ${LIBS} ${REDIS} )
TARGET_LINK_LIBRARIES ( testcli ${REDIS} )
